History for xm.theme
====================

(name of developer listed in brackets)

0.9 (unreleased)
----------------

- The username is not rendered on each page but on DOM load. This allows for
  caching based on roles instead of each user.[jladage]

- Images are moved to a skins folder, so they get cached properly using the
  HTTPCache. [jladage]

- The username in the personal_bar now links to the author page instead of the
  dashboard. [jladage]

- Added 'Iterations:' in front of the open/current/closed iterations list and
  show it only if we have iterations in the project.  [fredvd]
  
- Moved the employees_overview page to Products.eXtremeManagement.
  [maurits]

- Made the employees overview page much much faster.  The billable
  percentages are not quite the same as from the bookings per month
  pages they point to, but that is for another day.  [maurits]

- Protecting the big employees overview page with the Manage Portal
  permission now.  [maurits]


0.8 (2008-09-16)
----------------

- Added locales/en to work around i18n bug: with e.g. Dutch and
  English as allowed languages, Dutch as site default, English as
  browser language (the only one or not), you would get Dutch for all
  translations in the xm.theme domain, even though the rest of the UI
  is in English... [maurits]

- Fixed the livesearch.js customization to work with Plone 3.1.x We have to drop
  support for Plone 3.0.x for this one, because jquery.js is not available.
  [jladage]


0.7.3 (2008-08-01)
------------------

- Use gradient image in booking-per-month table heading.  [mirella]
  (Moved from Products.eXtremeManagement trunk by Maurits.)

- Made gradient images bigger in height for layout reasons. [mirella]

- Fixed name typo in css. [mirella]

- Placed the gradient images in bottom in the used classes. [mirella]

- Added translations and description for employees overview. [mirella]

- Added odd color and padding to employees overview. [mirella]
