@@ -12,53 +12,11 @@
       name="eXtremeManagement"
       />
 
-  <!-- Viewlets manager -->
-  <browser:viewletManager
-      name="xm.project_tabs_manager"
-      provides="xm.theme.browser.interfaces.IProjectTabsManager"
-      permission="zope2.View"
-      class="plone.app.viewletmanager.manager.OrderedViewletManager"
-      />
-
-  <!-- Viewlets registration -->
-
   <browser:viewlet
       name="xm.project_header"
       manager="plone.app.layout.viewlets.interfaces.IPortalHeader"
       layer=".interfaces.IThemeSpecific"
       class=".viewlets.XMProjectHeaderViewlet"
-      permission="zope2.View"
-      />
-
-  <browser:viewlet
-      name="xm.project_tabs"
-      manager="plone.app.layout.viewlets.interfaces.IPortalHeader"
-      layer=".interfaces.IThemeSpecific"
-      class=".viewlets_project_tabs.XMProjectTabsViewlet"
-      permission="zope2.View"
-      />
-
-  <browser:viewlet
-      name="xm.project_tab_current"
-      manager="xm.theme.browser.interfaces.IProjectTabsManager"
-      layer=".interfaces.IThemeSpecific"
-      class=".viewlets_project_tabs.CurrentIterationsViewlet"
-      permission="zope2.View"
-      />
-
-  <browser:viewlet
-      name="xm.project_tab_open"
-      manager="xm.theme.browser.interfaces.IProjectTabsManager"
-      layer=".interfaces.IThemeSpecific"
-      class=".viewlets_project_tabs.OpenIterationsViewlet"
-      permission="zope2.View"
-      />
-
-  <browser:viewlet
-      name="xm.project_tab_closed"
-      manager="xm.theme.browser.interfaces.IProjectTabsManager"
-      layer=".interfaces.IThemeSpecific"
-      class=".viewlets_project_tabs.ClosedIterationsViewlet"
       permission="zope2.View"
       />
 
@@ -126,7 +84,7 @@
       template="templates/project_content_page.pt"
       permission="zope2.View"
       />
-      
+
   <!-- Content views (tabs) -->
   <browser:viewlet
       name="plone.contentviews"
@@ -135,7 +93,7 @@
       template="templates/contentviews.pt"
       permission="zope2.View"
       />
-      
+
   <!-- XM theme dashboard -->
    <browser:page
       for="Products.CMFCore.interfaces.ISiteRoot"
@@ -145,7 +103,7 @@
       template="templates/dashboard.pt"
       layer=".interfaces.IThemeSpecific"
       />
- 
+
  <browser:page
       for="Products.CMFCore.interfaces.ISiteRoot"
       name="manage-dashboard"
