@@ -1,10 +1,0 @@
-<li id=""
-    class=""
-    tal:condition="view/available"
-    tal:attributes="id view/element_id;
-                    class view/tab_class;">
-  <a href=""
-     tal:attributes="href view/url;
-                     title view/description;"
-     tal:content="structure view/title" />
-</li>
