@@ -12,13 +12,12 @@
   <viewlet name="plone.skip_links"/>
   <viewlet name="plone.site_actions"/>
   <viewlet name="xm.project_header"/>
-  <viewlet name="xm.project_tabs"/>
  </order>
 
  <hidden manager="plone.portaltop" skinname="eXtremeManagement" purge="True">
    <viewlet name="plone.app.i18n.locales.languageselector"/>
    <viewlet name="plone.personal_bar"/>
-   
+
  </hidden>
 
  <hidden manager="plone.portalheader" skinname="eXtremeManagement">
@@ -35,13 +34,5 @@
  <hidden manager="plone.belowcontentbody" skinname="eXtremeManagement">
   <viewlet name="plone.belowcontentbody.workflowhistory" />
  </hidden>
-
- <!-- Moved the iteration links to a portlet
-      This can be remove after releasing 2.0 -->
-  <hidden manager="xm.project_tabs_manager" skinname="eXtremeManagement">
-   <viewlet name="xm.project_tab_current"/>
-   <viewlet name="xm.project_tab_open"/>
-   <viewlet name="xm.project_tab_closed"/>
-  </hidden>
 
 </object>
